src/test/ui/parser/extern-no-fn.stderr
error: expected one of `!` or `::`, found `(`
  --> $DIR/extern-no-fn.rs:2:6
   |
LL |     f();
   |      ^ expected one of `!` or `::`

error: aborting due to previous error

